--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/primeflex/primeflex.css",
               "node_modules/primeng/resources/themes/soho-dark/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "src/styles.scss"
