--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.0",
     "express": "^4.18.2",
+    "primeflex": "^3.3.1",
     "primeng": "^17.11.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
