--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.0",
     "express": "^4.18.2",
+    "lottie-web": "^5.12.2",
+    "ngx-lottie": "^11.0.2",
     "primeflex": "^3.3.1",
     "primeng": "^17.11.0",
     "rxjs": "~7.8.0",
